--- a/index.html
+++ b/index.html
@@ -232,7 +232,8 @@
                 rows="5"
                 cols="5"
               ></textarea>
-              <button type="submit" id="mail-btn" class="whiten">
+              <button type="submit" id="mail-btn" data-aos="flip-up"
+                data-aos-delay="450" class="whiten">
                 Leave a Mail
               </button>
             </form>
