--- a/index.html
+++ b/index.html
@@ -232,8 +232,7 @@
                 rows="5"
                 cols="5"
               ></textarea>
-              <button type="submit" id="mail-btn" data-aos="flip-up"
-                data-aos-delay="450" class="whiten">
+              <button type="submit" id="mail-btn" data-aos="flip-up" class="whiten">
                 Leave a Mail
               </button>
             </form>
